[package]
name = "bpl-class-registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hyper = { version = "0.14.10", features = ["full"]}
hyper-tls = "0.5.0"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6"
serde_yaml = "0.9.21"
tokio = { version = "1", features = ["full"] }
